--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,9 @@
             transform: scale(1.1);
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
+        
+        
+
     </style>
 </head>
 <body>
@@ -79,7 +82,8 @@
     <!-- Center Div -->
     <div class="center-div">
         <h1>Welcome to the Travel Recommendation System</h1>
-        <a href="/recommendation" class="btn">Travel Recommendation</a>
+        <a href="/login" class="btn">Travel Recommendation</a>
+        
     </div>
 </body>
 </html>
