--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -223,6 +223,24 @@
         .btn-custom:hover {
             background-color: #0056b3;
         }
+        .center {
+        text-align: center;
+        }
+        .logout-btn {
+        display: block;
+        margin: 20px auto;
+        text-align: center;
+        font-size: 20px;
+        text-decoration: none;
+        color: white;
+        background-color: #007bff;
+        padding: 10px 20px;
+        border-radius: 8px;
+        width: fit-content;
+        }
+        .logout-btn:hover {
+        background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -275,6 +293,7 @@
 
                         <div class="text-center">
                             <button type="submit" class="btn btn-custom">Lọc kết quả</button>
+                            <a href="/logout" class="logout-btn">Logout</a>
                         </div>
                     </form>
                 </div>
