--- a/templates/hotel_results.html
+++ b/templates/hotel_results.html
@@ -219,7 +219,7 @@
                         {% endif %}
                         
                         <div class="text-center">
-                            <a href="/hotel/{{ loop.index }}" class="btn btn-view">
+                            <a href="/hotel/{{hotel.id}}" class="btn btn-view">
                                 <i class="fas fa-eye"></i> View Details
                             </a>
                         </div>
